--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^4.3.0",
+    "dotenv-webpack": "^2.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "html-webpack-plugin": "^4.4.1",
